flapivor/tests/m3/hopix/typechecker/good/40-pattern-matching-04.hopix
type Option = None | Some (Int)

val x : Int = case Some<>(42) { Some<>(x : Int) => x | None<> => 0 }