flapivor/tests/m3/hopix/typechecker/bad/34-record-matching-01.hopix
type T = { x : Int }

val main : String = case { x = 0 }<> { { x = (y : Int) }<> => y }